1. Theme color added, card background changed to gradient, App icon added and other UI changes 2. Locale added for Arabic 3. Data Binding added for example purpose 4. AppSession created for DataStore

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,10 @@
     <string name="email">Email</string>
     <string name="invalid_email">Invalid Email!</string>
     <string name="invalid_pass">Invalid Password!</string>
+    <string name="submit">Submit</string>
+    <string name="hola">Hola!</string>
+    <string name="english">English</string>
+    <string name="arabic">عربي</string>
+    <string name="posts">Posts</string>
+    <string name="favourites">Favourites</string>
 </resources>
